Always initialize the are_beacon_seeds_loaded field of RemoteDevice.

BUG=728713

Review-Url: https://codereview.chromium.org/2915133002
Cr-Commit-Position: refs/heads/master@{#476378}

Former-commit-id: 7d0b5dfa22bbc761575c3627e7627819ec8b4c8c