components/cryptauth/remote_device.cc
@@ -45,8 +45,7 @@ RemoteDevice::RemoteDevice(const std::string& user_id,
       public_key(public_key),
       bluetooth_address(bluetooth_address),
       persistent_symmetric_key(persistent_symmetric_key),
-      sign_in_challenge(sign_in_challenge),
-      are_beacon_seeds_loaded(false) {}
+      sign_in_challenge(sign_in_challenge) {}
 
 RemoteDevice::RemoteDevice(const RemoteDevice& other) = default;
 
